--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="c_fafafa">#fafafa</color>
+    <color name="c_aaaaaa">#aaaaaa</color>
     <color name="c_323233">#323233</color>
     <color name="c_ce2029">#ce2029</color>
     <color name="c_baf2ef">#baf2ef</color>
@@ -11,4 +12,5 @@
     <color name="c_b0c4de">	#B0C4DE</color>
     <color name="c_75f336">#75F336</color>
     <color name="c_db7093">#DB7093</color>
+    <color name="c_ffff00">#ffff00</color>
 </resources>
