--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -19,8 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:foreground="?attr/selectableItemBackground"
-        android:minWidth="400dp"
-        android:minHeight="500dp"
         app:cardBackgroundColor="@color/c_323233"
         app:cardCornerRadius="16dp"
         app:cardElevation="8dp">
@@ -28,8 +26,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minWidth="400dp"
-            android:minHeight="500dp"
             android:padding="16dp">
 
             <androidx.cardview.widget.CardView
@@ -72,8 +68,9 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/type_recycler_view"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:weightSum="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -83,8 +80,9 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/type_header"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:weightSum="1"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@id/weight"
                 app:layout_constraintStart_toEndOf="@id/background"
