--- a/app/src/main/res/layout/pokemon_item_type_view.xml
+++ b/app/src/main/res/layout/pokemon_item_type_view.xml
@@ -14,14 +14,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:background="@{pokemonType.type.name}"
-        android:layout_marginStart="8dp">
+        android:layout_marginStart="4dp"
+        app:background="@{pokemonType.type.name}">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:text="@{pokemonType.type.name}"
@@ -29,7 +27,7 @@
             android:textAlignment="center"
             android:textColor="@color/c_323233"
             android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
     </LinearLayout>
 
