--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="c_75f336">#75F336</color>
     <color name="c_db7093">#DB7093</color>
     <color name="c_ffff00">#ffff00</color>
+    <color name="c_808080">#808080</color>
 </resources>
